1. Move folder demo-search to customer-search 2. Completed the controller and service 3. Added unit tests and IT tests
