# src/main/resources/openapi/customer.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
 
 paths:
-  /customers:
+  /customers/listAllCustomers:
     get:
       summary: List all customers
       operationId: listCustomers
@@ -17,7 +17,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Customer'
-  /customers/searchByFirstName:
+  /customers/search/searchByFirstName:
     get:
       summary: Search customers by first name
       operationId: searchCustomersByFirstName
@@ -27,6 +27,20 @@ paths:
           required: true
           schema:
             type: string
+          description: The first name of the customer to search for
+        - name: sortField
+          in: query
+          required: false
+          schema:
+            type: string
+          description: The field to sort by (e.g., firstName, lastName, companyId)
+        - name: sortDirection
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [ asc, desc ]
+          description: The sort direction (asc or desc)
       responses:
         '200':
           description: A list of customers with the given first name
@@ -37,11 +51,11 @@ paths:
                 items:
                   $ref: '#/components/schemas/Customer'
         '404':
-            description: A user with the specified ID was not found.
+          description: A user with the specified ID was not found.
         '503':
-            description: Unexpected error.
+          description: Unexpected error.
 
-  /customers/searchByLastName:
+  /customers/search/searchByLastName:
     get:
       summary: Search customers by last name
       operationId: searchCustomersByLastName
@@ -51,6 +65,20 @@ paths:
           required: true
           schema:
             type: string
+          description: The last name of the customer to search for
+        - name: sortField
+          in: query
+          required: false
+          schema:
+            type: string
+          description: The field to sort by (e.g., firstName, lastName, companyId)
+        - name: sortDirection
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [ asc, desc ]
+          description: The sort direction (asc or desc)
       responses:
         '200':
           description: A list of customers with the given last name
@@ -64,16 +92,30 @@ paths:
           description: A user with the specified ID was not found.
         '503':
           description: Unexpected error.
-  /customers/searchByCompanyName:
+  /customers/search/searchByCompanyId:
     get:
-      summary: Search customers by last name
-      operationId: searchCustomersByCompanyName
+      summary: Search customers by customer id
+      operationId: searchCustomersByCompanyId
       parameters:
-        - name: companyName
+        - name: companyId
           in: query
           required: true
           schema:
+            type: integer
+          description: The company id of the customer to search for
+        - name: sortField
+          in: query
+          required: false
+          schema:
             type: string
+          description: The field to sort by (e.g., firstName, lastName, companyId)
+        - name: sortDirection
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [ asc, desc ]
+          description: The sort direction (asc or desc)
       responses:
         '200':
           description: A list of customers with the given company name
@@ -97,13 +139,28 @@ components:
           type: integer
         firstName:
           type: string
+          pattern: ^[A-Z]+$
           maxLength: 50
           minLength: 1
+          description: id of customer
         lastName:
           type: string
+          pattern: ^[A-Z]+$
           maxLength: 50
           minLength: 1
-        companyName:
+          description: last name of customer
+        company:
+          type: object
+          $ref: '#/components/schemas/Company'
+    Company:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: id of the company
+        name:
           type: string
+          pattern: /^\w+$/
           maxLength: 50
           minLength: 1
+          description: name of the company that the customer works for
